Fixes bug where toggling Search not resetting 3D projection. Fixes Search spacing and order on mobile.

--- a/components/navigation-search/assets/styles/navigation-search.scss
+++ b/components/navigation-search/assets/styles/navigation-search.scss
@@ -15,7 +15,6 @@ $layout-search-field-height: 50px;
   display: none;
   position: relative;
   width: 100%;
-  border-bottom: 10px solid darken($color-title-open-bg, 10%);
   background-color: $color-title-open-bg;
   transition: $animation-speed;
 
